# retro-voice-core

./: .env  .gitignore  INTEGRATION_SUMMARY.md  README.md  env.template  index.html  package-lock.json  package.json  tailwind.config.ts
agent/: README.md  agent.py  env.local.template  pyproject.toml  requirements.txt
src/: App.tsx  index.css
src/components/: AdminLayout.tsx  AdminQuickAccess.tsx  AdminRoute.tsx  CRTOverlay.tsx  DebugTerminal.tsx  OrientationLock.tsx  PixelFace.tsx  ProtectedRoute.tsx
src/components/admin/: AssistantFiles.tsx  McpServerDialog.tsx
src/components/ui/: button.tsx
src/contexts/: AuthContext.tsx  VoiceContext.tsx
src/hooks/: useAdmin.ts  useLiveKit.ts  useOpenAIVoice.ts
src/integrations/supabase/: types.ts
src/lib/: livekit-token.ts
src/pages/: Auth.tsx  Index.tsx  Profile.tsx
src/pages/admin/: AssistantDetail.tsx  AssistantForm.tsx  Assistants.tsx  Dashboard.tsx  KnowledgeBase.tsx  McpServers.tsx
supabase/: config.toml
supabase/migrations/: 20251129123142_c2033f27-14c0-4487-8265-5eac26ab8365.sql  20251129124916_7c46b823-0543-4707-b20d-f7e027f98a89.sql  20251129130910_88a5ce86-fb2b-488c-9010-20a2d95ea48c.sql  20251129131221_e44f727b-5787-4939-93e3-d24fe7416d1e.sql  20251130132623_c98c5b24-d65f-4ac1-a62e-bf24a8e349d4.sql  20251130134138_9cfaefb8-eb2f-40e0-a636-15716f3758ce.sql
